# lmdeploy-v100

./: .gitignore  README.md  README_zh-CN.md  start_server.sh
lmdeploy/: archs.py  lib  messages.py  model.py  tokenizer.py  utils.py
lmdeploy/cli/: serve.py  utils.py
lmdeploy/serve/openai/: anthropic_protocol.py  api_server.py  serving_anthropic.py
lmdeploy/serve/openai/reasoning_parser/: __init__.py  minimax_m2_reasoning_parser.py  step3p5_reasoning_parser.py
lmdeploy/serve/openai/tool_parser/: __init__.py  minimax_m2_parser.py  qwen3_5_parser.py
lmdeploy/serve/processors/: multimodal.py
lmdeploy/turbomind/: supported_models.py  turbomind.py
lmdeploy/turbomind/deploy/: config.py  converter.py  module.py  parameter.py  policy.py
lmdeploy/turbomind/deploy/source_model/: __init__.py  gguf_dequant.py  gguf_model.py  gguf_reader.py  qwen.py  qwen3_next.py  step3p5.py
lmdeploy/turbomind/deploy/target_model/: base.py
lmdeploy/vl/: utils.py
lmdeploy/vl/model/: qwen3.py
sessions/: 1.md
src/turbomind/: CMakeLists.txt  turbomind.cc
src/turbomind/engine/: batch.h  engine.cc  model_executor.cc  request.h
src/turbomind/kernels/: CMakeLists.txt  activation.cu  activation.h
src/turbomind/kernels/attention/: CMakeLists.txt  attention.cu  attention_config.h  attention_universal.h  decoding.cu  decoding_config.h  impl.h  impl_884.h  impl_884_decode.h  kv_cache_utils_v2.cu  reduce.cu  sigmoid_gate.cu  sigmoid_gate.h
src/turbomind/kernels/gated_delta_net/: CMakeLists.txt  causal_conv1d.cu  causal_conv1d.h  delta_rule.cu  delta_rule.h  gated_rmsnorm.cu  gated_rmsnorm.h  gating.cu  gating.h  gdn_utils.cu  gdn_utils.h  test_causal_conv1d.cu  test_delta_rule_prefill.cu
src/turbomind/kernels/gguf/: CMakeLists.txt  dequantize.cu  dequantize.h  gguf_types.h
src/turbomind/models/: CMakeLists.txt  language_model.cc
(+41 files in other folders)
